--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,11 +24,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Install apt dependencies with caching for faster builds.
-      - uses: awalsh128/cache-apt-pkgs-action@latest
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
         with:
-          packages: python3 python-jinja2
-          version: 1.0
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install jinja2
 
       - name:  build_site
         run:
