--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name:  build_site
         run:
-          cd scripts && \
+          cd scripts
           python generate.py && \
           echo "::debug::generated site"
           git config user.name "${GITHUB_ACTOR}" && \
