--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,8 +34,8 @@ jobs:
           pip install jinja2
 
       - name:  build_site
-        run:
-          cd scripts
+        run: |
+          cd scripts && \
           python generate.py && \
           echo "::debug::generated site"
           git config user.name "${GITHUB_ACTOR}" && \
