--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,28 +24,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4
+      # Install apt dependencies with caching for faster builds.
+      - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install jinja2
+          packages: python-jinja2
+          version: 1.0
 
       - name:  build_site
         run: |
           cd scripts && \
           echo "::debug::generating site"
-          python generate.py && \
-          echo "::debug::generated site"
-          echo "::debug::GITHUB_ACTOR is ${GITHUB_ACTOR}."
-          git config user.name "${GITHUB_ACTOR}" && \
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com" && \
-          echo "::debug::commit author is set to the default github actor"
+          python3 generate.py && \
           echo "::debug::Initializing new repo (branch named 'mysite')"
           cd ../site && \
           git init -b mysite && \
+          git config user.name "${GITHUB_ACTOR}" && \
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com" && \
           git add . && \
           git commit -m "Site build from workflow action" && \
           echo "::debug::Pushing to target branch" && \
