--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,17 +24,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Install apt dependencies with caching for faster builds.
-      - uses: awalsh128/cache-apt-pkgs-action@latest
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v4
         with:
-          packages: python-jinja2
-          version: 1.0
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install jinja2
 
       - name:  build_site
         run: |
           cd scripts && \
           echo "::debug::generating site"
-          python3 generate.py && \
+          python generate.py && \
           echo "::debug::Initializing new repo (branch named 'mysite')"
           cd ../site && \
           git init -b mysite && \
