--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,23 +35,6 @@ jobs:
 
       - name:  build_site
         run: |
-          cd scripts && \
-          echo "::debug::generating site"
-          python generate.py && \
-          echo "::debug::Initializing new repo (branch named 'mysite')"
-          cd ../site && \
-          git init -b mysite && \
-          git config user.name "${{GITHUB_ACTOR}}" && \
-          git config user.email "${{GITHUB_ACTOR}}@users.noreply.github.com" && \
-          git add . && \
-          git commit -m "Site build from workflow action" && \
-          echo "::debug::Pushing to target branch" && \
-          echo "::debug::${{REPO}}" && \
-          echo "::debug::${{inputs.target_branch}}" && \
-          echo "::debug::git push --force $REPO mysite:${{inputs.target_branch}}" && \
-          echo "::debug::pushing" && \
-          git push --force $REPO mysite:${{inputs.target_branch}} && \
-          echo "SHA=$( git rev-parse mysite )" >> $GITHUB_OUTPUT
-          rm -rf .git && \
-          cd .. 
-
+          echo "repo $REPO"
+          echo "github actor $GITHUB_ACTOR"
+          echo "target branch ${{ inputs.target_branch }}"
