--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,6 +30,9 @@ jobs:
     runs-on: ubuntu-20.04
  
     steps:
+      - name: Log selected branch
+        run: echo "::notice Building selected branch ${{ inputs.target_branch }}."
+
       - uses: actions/checkout@v3
         with:
           submodules: ${{ inputs.submodules }}
